# casadi_kin_dyn

./: .gitignore  .travis.yml  .travis_old.yml  CMakeLists.txt  MANIFEST.in  README.md  copy_external_dependencies.py  environment.yml  setup.cfg  setup.py
bindings/python/: CMakeLists.txt  __init__.py  pyCasadiKinDyn.cpp
cmake/: FindXenomai.cmake  generate_deb_pkg.cmake  xeno-build.cmake
conda/: build.sh  cart_pole.urdf  env_build.yml  meta.yaml  run_test.py
include/casadi_kin_dyn/: casadi_collision_handler.h  casadi_kin_dyn.h
src/: casadi_collision_handler.cpp  casadi_kin_dyn.cpp  letsee.cpp
src/casadi_wrapper/: CMakeLists.txt  f.cpp  jacf.cpp
tests/: CMakeLists.txt  PinocchioWrapper.cpp  PinocchioWrapper.h  run_test.py  test_derivatives.cpp
travis/: init.sh  init_conda.sh  init_forest.sh  run.sh  run_conda.sh  run_python.sh
travis/recipes/: casadi.yaml  casadi_kin_dyn.yaml  ipopt.yaml  pinocchio.yaml  pybind11.yaml
travis/recipes/casadi_kin_dyn_recipes/recipes/: casadi.yaml  hpp-fcl.yaml  osqp.yaml
